--- a/parallel_data/get_data.ipynb
+++ b/parallel_data/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,13 +25,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset_name = \"Paul/hatecheck\"\n",
+    "dataset_name = \"Paul/hatecheck\"\n",
     "\n",
-    "dataset_name = \"Paul/hatecheck-spanish\"\n",
+    "# dataset_name = \"Paul/hatecheck-spanish\"\n",
     "# dataset_name = \"piuba-bigdata/contextualized_hate_speech\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-portuguese\"\n",
@@ -50,137 +50,87 @@
     "# dataset_name = \"Paul/hatecheck-polish\"\n",
     "# dataset_name = \"Paul/hatecheck-hindi\"\n",
     "\n",
-    "lang = 'es'"
+    "lang = 'en'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading readme: 100%|██████████| 3.49k/3.49k [00:00<00:00, 1.97MB/s]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading and preparing dataset csv/Paul--hatecheck-spanish to /home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-spanish-8297884bca10d574/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading data: 100%|██████████| 1.07M/1.07M [00:00<00:00, 1.63MB/s]\n",
-      "Downloading data files: 100%|██████████| 1/1 [00:01<00:00,  1.93s/it]\n",
-      "Extracting data files: 100%|██████████| 1/1 [00:00<00:00, 1817.29it/s]\n",
-      "Generating test split: 0 examples [00:00, ? examples/s]/home/cass/anaconda3/envs/eva/lib/python3.11/site-packages/datasets/download/streaming_download_manager.py:776: FutureWarning: the 'mangle_dupe_cols' keyword is deprecated and will be removed in a future version. Please take steps to stop the use of 'mangle_dupe_cols'\n",
-      "  return pd.read_csv(xopen(filepath_or_buffer, \"rb\", use_auth_token=use_auth_token), **kwargs)\n",
-      "                                                       "
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dataset csv downloaded and prepared to /home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-spanish-8297884bca10d574/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317. Subsequent calls will reuse this data.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r"
+      "Found cached dataset csv (/home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-de74109e77bfb6c3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
+      "Creating CSV from Arrow format: 100%|██████████| 4/4 [00:00<00:00, 96.52ba/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'mhc_case_id': 'spanish-1',\n",
-       " 'functionality': 'derog_neg_emote_h',\n",
-       " 'test_case': 'Odio a los negros.',\n",
-       " 'label_gold': 'hateful',\n",
-       " 'target_ident': 'black people',\n",
-       " 'ref_case_id': None,\n",
-       " 'ref_templ_id': None,\n",
-       " 'templ_id': 1,\n",
-       " 'case_templ': None,\n",
-       " 'gender_male': 'Odio a los [male_IDENT_P].',\n",
-       " 'gender_female': 'Odio a las [female_IDENT_P].',\n",
-       " 'label_annotated': \"['hateful', 'hateful', 'hateful']\",\n",
-       " 'label_annotated_maj': 'hateful',\n",
-       " 'disagreement_in_case': False,\n",
-       " 'disagreement_in_template': False}"
+       "652140"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dataset = load_dataset(dataset_name, split=\"test\")  #, split=\"test\"\n",
-    "dataset[0]"
+    "dataset[0]\n",
+    "dataset.to_csv(f'./hate/{lang}/identity_terms.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['black', 'gay', 'trans', 'indigenous', 'jews', 'disabled', 'women']"
-      ]
-     },
-     "execution_count": 113,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "idt_list = []\n",
-    "sentence_example = []\n",
+    "hate_idt = []\n",
+    "nonhate_idt = []\n",
     "\n",
     "for i in dataset:\n",
     "    if i['label_gold'] == 'hateful':\n",
-    "        idt = i['target_ident'].split()\n",
-    "        for w in idt:\n",
-    "            if w not in idt_list:\n",
-    "                idt_list.append(w)\n",
-    "                sentence_example.append(i['test_case'])\n",
-    "       \n",
-    "        \n",
+    "        if i['target_ident'] != None:\n",
+    "            hate_idt.append(i['test_case'])\n",
+    "    elif i['label_gold'] == 'non-hateful':\n",
+    "        if i['target_ident'] != None:\n",
+    "            nonhate_idt.append(i['test_case'])\n",
+    "    else:\n",
+    "        print(i)\n",
     "\n",
-    "idt_list.remove('people')\n",
-    "idt_list\n"
+    "\n",
+    "import json\n",
+    "with open(f\"./hate/{lang}/hate_idt.json\", 'w') as f:\n",
+    "    json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "with open(f\"./hate/{lang}/nonhate_idt.json\", 'w') as f:\n",
+    "    json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
+    "       \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Odio a los negros.',\n",
-       " 'Odio a los negros.',\n",
-       " 'Odio a los gays.',\n",
-       " 'Odio a los trans.',\n",
-       " 'Odio a los indígenas.',\n",
-       " 'Odio a los judíos.',\n",
-       " 'Odio a los discapacitados.',\n",
-       " 'Odio a las mujeres.']"
+       "['I hate women. ',\n",
+       " 'I hate trans people. ',\n",
+       " 'I hate trans people. ',\n",
+       " 'I hate gay people. ',\n",
+       " 'I hate black people. ',\n",
+       " 'I hate disabled people. ',\n",
+       " 'I hate Muslims. ',\n",
+       " 'I hate immigrants. ']"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,32 +141,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import logging\n",
-    "import sys\n",
+    "# idt_list = ['trans', 'gay', 'disabili', 'musulmani', 'immigrati', 'donne', 'neri', 'persone di colore']\n",
+    "# idt_list = ['negro', 'gay', 'trans', 'indígena', 'judíos', 'discapacitados', 'mujeres']\n",
+    "# idt_list = ['mulheres', 'negros', 'gays', 'pessoas', 'trans', 'indígenas', 'judeus', 'deficientes']\n",
+    "idt_list = ['女人', '跨性别者', '同性恋', '黑人', '穆斯林', '外国人']\n",
     "\n",
-    "logging.basicConfig(filename=f'./hate/{lang}/identity_terms.txt',level=logging.info)\n",
     "\n",
-    "logging.info(sentence_example)\n",
     "logging.info(idt_list)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "idt_list = ['trans', 'gay', 'disabili', 'musulmani', 'immigrati', 'donne', 'neri', 'persone di colore']\n",
-    "logging.info(idt_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,40 +167,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['women', 'trans', 'gay', 'black', 'disabled', 'Muslims', 'immigrants']"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "hate = []\n",
-    "nonhate = []\n",
-    "for i in dataset:\n",
-    "    if i['label_gold'] == 'hateful':\n",
-    "        hate.append(i['test_case'])\n",
-    "    else:\n",
-    "        nonhate.append(i['test_case'])\n",
-    "\n",
-    "\n",
-    "hate_idt = []\n",
-    "hate_nonidt = []\n",
-    "for i in hate:\n",
-    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "        hate_idt.append(i)\n",
-    "    else:\n",
-    "        hate_nonidt.append(i) # hate without idt / non hate with idt\n",
-    "\n",
-    "\n",
-    "nonhate_idt = []\n",
-    "nonhate_nonidt = []\n",
-    "for i in nonhate:\n",
-    "    if len([each for each in idt_list if each.lower() in i.split()])>0: # hate speech with idt\n",
-    "        nonhate_idt.append(i)\n",
-    "    else:\n",
-    "        nonhate_nonidt.append(i) # hate without idt / non hate with idt"
+    "idt_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "hate_idt = []\n",
+    "hate_nonidt = []\n",
+    "\n",
+    "for i in dataset:\n",
+    "    if i['label_gold'] == 'hateful':\n",
+    "        sentence = i['test_case']\n",
+    "        if any(word.lower() in sentence.split() for word in idt_list):\n",
+    "            hate_idt.append(sentence)\n",
+    "        else:\n",
+    "            hate_nonidt.append(sentence)\n",
+    "    else:\n",
+    "        pass\n",
+    "\n",
+    "\n",
+    "with open(f\"./hate/{lang}/hate_idt.json\", 'w') as f:\n",
+    "    json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "with open(f\"./hate/{lang}/hate_nonidt.json\", 'w') as f:\n",
+    "    json.dump(hate_nonidt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "quit()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -433,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -481,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
