--- a/parallel_data/get_data.ipynb
+++ b/parallel_data/get_data.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,12 +103,24 @@
     "        print(i)\n",
     "\n",
     "\n",
-    "import json\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "path = f\"./hate/{lang}/\"\n",
+    "# Check whether the specified path exists or not\n",
+    "isExist = os.path.exists(path)\n",
+    "if not isExist:\n",
+    "\n",
+    "   # Create a new directory because it does not exist\n",
+    "   os.makedirs(path)\n",
+    "\n",
     "with open(f\"./hate/{lang}/hate_idt.json\", 'w') as f:\n",
     "    json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
     "\n",
     "with open(f\"./hate/{lang}/nonhate_idt.json\", 'w') as f:\n",
     "    json.dump(nonhate_idt, f, indent=4, ensure_ascii=False) \n",
+    "\n",
+    "quit()\n",
     "       \n"
    ]
   },
