--- a/parallel_data/get_hate_data.ipynb
+++ b/parallel_data/get_hate_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,17 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset_name = \"Paul/hatecheck\"\n",
+    "# dataset_name = \"Paul/hatecheck\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-spanish\"\n",
     "# dataset_name = \"piuba-bigdata/contextualized_hate_speech\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-portuguese\"\n",
-    "# dataset_name = \"hate_speech_portuguese\"\n",
     "# dataset_name = \"Paul/hatecheck-german\"\n",
     "# dataset_name = \"Paul/hatecheck-italian\"\n",
     "# dataset_name = \"flax-sentence-embeddings/Gender_Bias_Evaluation_Set\"\n",
@@ -47,10 +46,52 @@
     "# dataset_name = \"Paul/hatecheck-mandarin\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-dutch\"\n",
-    "# dataset_name = \"Paul/hatecheck-polish\"\n",
+    "dataset_name = \"Paul/hatecheck-polish\"\n",
     "# dataset_name = \"Paul/hatecheck-hindi\"\n",
     "\n",
-    "lang = 'en'"
+    "lang = 'po'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Found cached dataset csv (/home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-polish-4a18ae0888047920/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'mhc_case_id': 'polish-1',\n",
+       " 'functionality': 'derog_neg_emote_h',\n",
+       " 'test_case': 'Nienawidzę gejów.',\n",
+       " 'label_gold': 'hateful',\n",
+       " 'target_ident': 'gay people',\n",
+       " 'ref_case_id': None,\n",
+       " 'ref_templ_id': None,\n",
+       " 'templ_id': 1,\n",
+       " 'case_templ': 'Nienawidzę [IDENT_P].',\n",
+       " 'gender_male': None,\n",
+       " 'gender_female': None,\n",
+       " 'label_annotated': \"['hateful', 'hateful', 'hateful']\",\n",
+       " 'label_annotated_maj': 'hateful',\n",
+       " 'disagreement_in_case': False,\n",
+       " 'disagreement_in_template': False}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset = load_dataset(dataset_name, split=\"test\")  #, split=\"test\"\n",
+    "dataset[0]\n"
    ]
   },
   {
@@ -59,36 +100,32 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Found cached dataset csv (/home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-de74109e77bfb6c3/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n",
-      "Creating CSV from Arrow format: 100%|██████████| 4/4 [00:00<00:00, 96.52ba/s]\n"
-     ]
-    },
-    {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6564b8c0fad482c9b465663ac9bba2a",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "652140"
+       "Creating CSV from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]"
       ]
      },
-     "execution_count": 4,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "dataset = load_dataset(dataset_name, split=\"test\")  #, split=\"test\"\n",
-    "dataset[0]\n",
-    "dataset.to_csv(f'./hate/{lang}/identity_terms.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "import os\n",
+    "\n",
+    "path = f\"./hate/{lang}/\"\n",
+    "# Check whether the specified path exists or not\n",
+    "isExist = os.path.exists(path)\n",
+    "if not isExist:\n",
+    "   # Create a new directory because it does not exist\n",
+    "   os.makedirs(path)\n",
+    "\n",
+    "dataset.to_csv(f'./hate/{lang}/identity_terms.csv')\n",
+    "\n",
     "hate_idt = []\n",
     "nonhate_idt = []\n",
     "\n",
@@ -104,15 +141,7 @@
     "\n",
     "\n",
     "\n",
-    "import os\n",
     "\n",
-    "path = f\"./hate/{lang}/\"\n",
-    "# Check whether the specified path exists or not\n",
-    "isExist = os.path.exists(path)\n",
-    "if not isExist:\n",
-    "\n",
-    "   # Create a new directory because it does not exist\n",
-    "   os.makedirs(path)\n",
     "\n",
     "with open(f\"./hate/{lang}/hate_idt.json\", 'w') as f:\n",
     "    json.dump(hate_idt, f, indent=4, ensure_ascii=False) \n",
@@ -126,36 +155,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['I hate women. ',\n",
-       " 'I hate trans people. ',\n",
-       " 'I hate trans people. ',\n",
-       " 'I hate gay people. ',\n",
-       " 'I hate black people. ',\n",
-       " 'I hate disabled people. ',\n",
-       " 'I hate Muslims. ',\n",
-       " 'I hate immigrants. ']"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'logging' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-8d349cf5f3c0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mlogging\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minfo\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0midt_list\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'logging' is not defined"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
-   "source": [
-    "sentence_example"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# idt_list = ['trans', 'gay', 'disabili', 'musulmani', 'immigrati', 'donne', 'neri', 'persone di colore']\n",
     "# idt_list = ['negro', 'gay', 'trans', 'indígena', 'judíos', 'discapacitados', 'mujeres']\n",
@@ -525,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.8.8"
   },
   "orig_nbformat": 4,
   "vscode": {
