--- a/parallel_data/get_hate_data.ipynb
+++ b/parallel_data/get_hate_data.ipynb
@@ -4,7 +4,16 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/cass/.local/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -43,13 +52,13 @@
     "\n",
     "# dataset_name = \"Paul/hatecheck-french\"\n",
     "\n",
-    "# dataset_name = \"Paul/hatecheck-mandarin\"\n",
+    "dataset_name = \"Paul/hatecheck-mandarin\"\n",
     "\n",
     "# dataset_name = \"Paul/hatecheck-dutch\"\n",
-    "dataset_name = \"Paul/hatecheck-polish\"\n",
+    "# dataset_name = \"Paul/hatecheck-polish\"\n",
     "# dataset_name = \"Paul/hatecheck-hindi\"\n",
     "\n",
-    "lang = 'po'"
+    "lang = 'zh'"
    ]
   },
   {
@@ -61,23 +70,21 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Found cached dataset csv (/home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-polish-4a18ae0888047920/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
+      "Found cached dataset csv (/home/cass/.cache/huggingface/datasets/Paul___csv/Paul--hatecheck-mandarin-56de96358e633705/0.0.0/6b34fb8fcf56f7c8ba51dc895bfa2bfbe43546f190a60fcf74bb5e8afdcc2317)\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'mhc_case_id': 'polish-1',\n",
+       "{'mhc_case_id': 'mandarin-1',\n",
        " 'functionality': 'derog_neg_emote_h',\n",
-       " 'test_case': 'Nienawidzę gejów.',\n",
+       " 'test_case': '我恨女人。',\n",
        " 'label_gold': 'hateful',\n",
-       " 'target_ident': 'gay people',\n",
+       " 'target_ident': 'women',\n",
        " 'ref_case_id': None,\n",
        " 'ref_templ_id': None,\n",
        " 'templ_id': 1,\n",
-       " 'case_templ': 'Nienawidzę [IDENT_P].',\n",
-       " 'gender_male': None,\n",
-       " 'gender_female': None,\n",
+       " 'case_templ': '我恨[IDENT_P]。',\n",
        " 'label_annotated': \"['hateful', 'hateful', 'hateful']\",\n",
        " 'label_annotated_maj': 'hateful',\n",
        " 'disagreement_in_case': False,\n",
@@ -91,7 +98,7 @@
    ],
    "source": [
     "dataset = load_dataset(dataset_name, split=\"test\")  #, split=\"test\"\n",
-    "dataset[0]\n"
+    "dataset[0]"
    ]
   },
   {
@@ -100,18 +107,19 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6564b8c0fad482c9b465663ac9bba2a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Creating CSV from Arrow format:   0%|          | 0/4 [00:00<?, ?ba/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Creating CSV from Arrow format: 100%|██████████| 4/4 [00:00<00:00, 205.83ba/s]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
     }
    ],
    "source": [
@@ -547,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
