--- a/results/read_results.ipynb
+++ b/results/read_results.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,227 +37,226 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Language</th>\n",
-       "      <th>Corpus Size</th>\n",
+       "      <th>Corpus_Size</th>\n",
        "      <th>Monolingual</th>\n",
+       "      <th>Mono_Pvalue</th>\n",
        "      <th>Multilingual</th>\n",
+       "      <th>Multi_Pvalue</th>\n",
        "      <th>Diff_in_Scores</th>\n",
        "      <th>MonoModel_Size</th>\n",
        "      <th>MultiModel_Size</th>\n",
        "      <th>Mono_token_len</th>\n",
        "      <th>Multi_token_len</th>\n",
-       "      <th>Mono_Pvalue</th>\n",
-       "      <th>Multi_Pvalue</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ar</td>\n",
-       "      <td>316</td>\n",
-       "      <td>48.97</td>\n",
-       "      <td>66.04</td>\n",
-       "      <td>-17.07</td>\n",
+       "      <td>595</td>\n",
+       "      <td>38.27</td>\n",
+       "      <td>1.157419e-08</td>\n",
+       "      <td>44.18</td>\n",
+       "      <td>1.441484e-01</td>\n",
+       "      <td>-5.91</td>\n",
        "      <td>135258880</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>12</td>\n",
-       "      <td>17</td>\n",
-       "      <td>3.545395e-01</td>\n",
-       "      <td>0.000002</td>\n",
+       "      <td>13</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>de</td>\n",
-       "      <td>301</td>\n",
-       "      <td>32.60</td>\n",
-       "      <td>54.21</td>\n",
-       "      <td>-21.61</td>\n",
+       "      <td>588</td>\n",
+       "      <td>35.00</td>\n",
+       "      <td>8.051144e-12</td>\n",
+       "      <td>45.95</td>\n",
+       "      <td>8.532016e-02</td>\n",
+       "      <td>-10.95</td>\n",
        "      <td>109960318</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>12</td>\n",
        "      <td>14</td>\n",
-       "      <td>2.147818e-06</td>\n",
-       "      <td>0.048520</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>du</td>\n",
-       "      <td>349</td>\n",
-       "      <td>36.68</td>\n",
-       "      <td>69.72</td>\n",
-       "      <td>-33.04</td>\n",
+       "      <td>588</td>\n",
+       "      <td>38.59</td>\n",
+       "      <td>1.381278e-04</td>\n",
+       "      <td>35.81</td>\n",
+       "      <td>5.537776e-08</td>\n",
+       "      <td>2.78</td>\n",
        "      <td>109169017</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>12</td>\n",
        "      <td>14</td>\n",
-       "      <td>1.641464e-05</td>\n",
-       "      <td>0.000012</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>en</td>\n",
-       "      <td>341</td>\n",
-       "      <td>51.41</td>\n",
-       "      <td>42.37</td>\n",
-       "      <td>9.04</td>\n",
+       "      <td>476</td>\n",
+       "      <td>48.75</td>\n",
+       "      <td>5.254280e-01</td>\n",
+       "      <td>40.40</td>\n",
+       "      <td>1.443904e-04</td>\n",
+       "      <td>8.35</td>\n",
        "      <td>109514298</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>6.028504e-01</td>\n",
-       "      <td>0.041904</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>es</td>\n",
-       "      <td>700</td>\n",
-       "      <td>73.53</td>\n",
-       "      <td>55.63</td>\n",
-       "      <td>17.90</td>\n",
+       "      <td>560</td>\n",
+       "      <td>48.46</td>\n",
+       "      <td>6.740551e-01</td>\n",
+       "      <td>46.76</td>\n",
+       "      <td>1.700432e-01</td>\n",
+       "      <td>1.70</td>\n",
        "      <td>109883418</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>12</td>\n",
        "      <td>14</td>\n",
-       "      <td>1.120113e-16</td>\n",
-       "      <td>0.091281</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>fr</td>\n",
-       "      <td>203</td>\n",
-       "      <td>21.11</td>\n",
-       "      <td>68.13</td>\n",
-       "      <td>-47.02</td>\n",
+       "      <td>567</td>\n",
+       "      <td>39.51</td>\n",
+       "      <td>1.316895e-04</td>\n",
+       "      <td>42.86</td>\n",
+       "      <td>1.054433e-02</td>\n",
+       "      <td>-3.35</td>\n",
        "      <td>110650880</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>15</td>\n",
-       "      <td>16</td>\n",
-       "      <td>4.118515e-11</td>\n",
-       "      <td>0.027807</td>\n",
+       "      <td>17</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>it</td>\n",
-       "      <td>698</td>\n",
-       "      <td>42.67</td>\n",
-       "      <td>59.52</td>\n",
-       "      <td>-16.85</td>\n",
+       "      <td>567</td>\n",
+       "      <td>40.79</td>\n",
+       "      <td>2.169510e-02</td>\n",
+       "      <td>39.42</td>\n",
+       "      <td>1.535213e-04</td>\n",
+       "      <td>1.37</td>\n",
        "      <td>109960318</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>12</td>\n",
-       "      <td>14</td>\n",
-       "      <td>4.788833e-03</td>\n",
-       "      <td>0.000005</td>\n",
+       "      <td>13</td>\n",
+       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>po</td>\n",
-       "      <td>201</td>\n",
-       "      <td>72.37</td>\n",
-       "      <td>52.21</td>\n",
-       "      <td>20.16</td>\n",
+       "      <td>648</td>\n",
+       "      <td>41.78</td>\n",
+       "      <td>1.439299e-04</td>\n",
+       "      <td>36.29</td>\n",
+       "      <td>1.144851e-08</td>\n",
+       "      <td>5.49</td>\n",
        "      <td>132182880</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>12</td>\n",
-       "      <td>16</td>\n",
-       "      <td>6.302464e-05</td>\n",
-       "      <td>0.765313</td>\n",
+       "      <td>14</td>\n",
+       "      <td>18</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>pt</td>\n",
-       "      <td>121</td>\n",
-       "      <td>51.56</td>\n",
-       "      <td>65.00</td>\n",
-       "      <td>-13.44</td>\n",
+       "      <td>581</td>\n",
+       "      <td>50.30</td>\n",
+       "      <td>5.556898e-01</td>\n",
+       "      <td>41.34</td>\n",
+       "      <td>2.777307e-05</td>\n",
+       "      <td>8.96</td>\n",
        "      <td>135258880</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>11</td>\n",
        "      <td>12</td>\n",
-       "      <td>6.601968e-02</td>\n",
-       "      <td>0.002507</td>\n",
+       "      <td>14</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>zh</td>\n",
-       "      <td>306</td>\n",
-       "      <td>54.75</td>\n",
-       "      <td>60.42</td>\n",
-       "      <td>-5.67</td>\n",
+       "      <td>574</td>\n",
+       "      <td>49.20</td>\n",
+       "      <td>8.670210e-01</td>\n",
+       "      <td>45.92</td>\n",
+       "      <td>1.342119e-02</td>\n",
+       "      <td>3.28</td>\n",
        "      <td>102290312</td>\n",
        "      <td>167463831</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>4.291953e-01</td>\n",
-       "      <td>0.021068</td>\n",
+       "      <td>17</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Language  Corpus Size  Monolingual  Multilingual  Diff_in_Scores  \\\n",
-       "0       ar          316        48.97         66.04          -17.07   \n",
-       "1       de          301        32.60         54.21          -21.61   \n",
-       "2       du          349        36.68         69.72          -33.04   \n",
-       "3       en          341        51.41         42.37            9.04   \n",
-       "4       es          700        73.53         55.63           17.90   \n",
-       "5       fr          203        21.11         68.13          -47.02   \n",
-       "6       it          698        42.67         59.52          -16.85   \n",
-       "7       po          201        72.37         52.21           20.16   \n",
-       "8       pt          121        51.56         65.00          -13.44   \n",
-       "9       zh          306        54.75         60.42           -5.67   \n",
+       "  Language  Corpus_Size  Monolingual   Mono_Pvalue  Multilingual  \\\n",
+       "0       ar          595        38.27  1.157419e-08         44.18   \n",
+       "1       de          588        35.00  8.051144e-12         45.95   \n",
+       "2       du          588        38.59  1.381278e-04         35.81   \n",
+       "3       en          476        48.75  5.254280e-01         40.40   \n",
+       "4       es          560        48.46  6.740551e-01         46.76   \n",
+       "5       fr          567        39.51  1.316895e-04         42.86   \n",
+       "6       it          567        40.79  2.169510e-02         39.42   \n",
+       "7       po          648        41.78  1.439299e-04         36.29   \n",
+       "8       pt          581        50.30  5.556898e-01         41.34   \n",
+       "9       zh          574        49.20  8.670210e-01         45.92   \n",
        "\n",
-       "   MonoModel_Size  MultiModel_Size  Mono_token_len  Multi_token_len  \\\n",
-       "0       135258880        167463831              12               17   \n",
-       "1       109960318        167463831              12               14   \n",
-       "2       109169017        167463831              12               14   \n",
-       "3       109514298        167463831              12               12   \n",
-       "4       109883418        167463831              12               14   \n",
-       "5       110650880        167463831              15               16   \n",
-       "6       109960318        167463831              12               14   \n",
-       "7       132182880        167463831              12               16   \n",
-       "8       135258880        167463831              11               12   \n",
-       "9       102290312        167463831              15               15   \n",
+       "   Multi_Pvalue  Diff_in_Scores  MonoModel_Size  MultiModel_Size  \\\n",
+       "0  1.441484e-01           -5.91       135258880        167463831   \n",
+       "1  8.532016e-02          -10.95       109960318        167463831   \n",
+       "2  5.537776e-08            2.78       109169017        167463831   \n",
+       "3  1.443904e-04            8.35       109514298        167463831   \n",
+       "4  1.700432e-01            1.70       109883418        167463831   \n",
+       "5  1.054433e-02           -3.35       110650880        167463831   \n",
+       "6  1.535213e-04            1.37       109960318        167463831   \n",
+       "7  1.144851e-08            5.49       132182880        167463831   \n",
+       "8  2.777307e-05            8.96       135258880        167463831   \n",
+       "9  1.342119e-02            3.28       102290312        167463831   \n",
        "\n",
-       "    Mono_Pvalue  Multi_Pvalue  \n",
-       "0  3.545395e-01      0.000002  \n",
-       "1  2.147818e-06      0.048520  \n",
-       "2  1.641464e-05      0.000012  \n",
-       "3  6.028504e-01      0.041904  \n",
-       "4  1.120113e-16      0.091281  \n",
-       "5  4.118515e-11      0.027807  \n",
-       "6  4.788833e-03      0.000005  \n",
-       "7  6.302464e-05      0.765313  \n",
-       "8  6.601968e-02      0.002507  \n",
-       "9  4.291953e-01      0.021068  "
+       "   Mono_token_len  Multi_token_len  \n",
+       "0              13               18  \n",
+       "1              14               16  \n",
+       "2              14               16  \n",
+       "3              13               13  \n",
+       "4              14               16  \n",
+       "5              17               18  \n",
+       "6              13               16  \n",
+       "7              14               18  \n",
+       "8              12               14  \n",
+       "9              17               17  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('idt_03-24_21-22.csv')\n",
+    "df = pd.read_csv('idtB_0326_1519.csv')\n",
     "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Language', 'Corpus Size', 'Monolingual', 'Multilingual',\n",
-       "       'Diff_in_Scores', 'MonoModel_Size', 'MultiModel_Size', 'Mono_token_len',\n",
-       "       'Multi_token_len', 'Mono_Pvalue', 'Multi_Pvalue', 'Mono_Sig',\n",
-       "       'Multi_Sig'],\n",
+       "Index(['Language', 'Corpus_Size', 'Monolingual', 'Mono_Pvalue', 'Multilingual',\n",
+       "       'Multi_Pvalue', 'Diff_in_Scores', 'MonoModel_Size', 'MultiModel_Size',\n",
+       "       'Mono_token_len', 'Multi_token_len', 'Mono_Sig'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +273,7 @@
    "outputs": [],
    "source": [
     "df['Multi_Sig'] = np.where(df['Multi_Pvalue'] < 0.05, 'Significant', 'Not Significant')\n",
-    "df.to_csv('after_tidy.csv')"
+    "df.to_csv('after_tidy_2603.csv')"
    ]
   }
  ],
@@ -294,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
